--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -11,39 +11,23 @@
     <title>preview | HELLO BOOKS</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../..style/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../style/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../..style/main.css" rel="stylesheet">
+    <link href="../../style/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="checkDaysLeft()">
 
     <nav class="navbar navbar-expand-md fixed-top">
         <a class="navbar-brand brand-main" href="#">hello
             <b style="color:white;">books</b>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-top" aria-controls="navbar-collapse-top"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbar-collapse-top">
-            <ul class="navbar-nav hidden-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">library</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">history</a>
-                </li>
-            </ul>
-        </div>
+       
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#" style="font-size:12px">
@@ -57,15 +41,15 @@
             <ul>
                 <li class="nav-item">
                     <a href="">
-                        <i class="fa fa-book"></i> library</a>
+                        <i class="fa fa-book"></i><b class="nav-term"> library</b></a>
                 </li>
                 <li class="nav-item active">
                     <a href="">
-                        <i class="fa fa-user-circle-o"></i> home</a>
+                        <i class="fa fa-user-circle-o"></i></i><b class="nav-term"> home</b></a>
                 </li>
                 <li class="nav-item">
                     <a href="">
-                        <i class="fa fa-map-o"></i> history</a>
+                        <i class="fa fa-map-o"></i></i><b class="nav-term"> history</b></a>
                 </li>
             </ul>
         </nav>
@@ -78,29 +62,71 @@
 
         <div class="container-fluid profile-info">
             <div class="row">
-                <div class="col-md-3 profile-pic-container">
-                    <img src="" alt="user's profile picture" class="profile-pic">
+                <div class="col-lg-3 col-md-2 profile-pic-container">
+                    <img src="../../media/profile-pics/prof_placeholder.jpg" alt="user's profile picture" class="profile-pic">
                 </div>
 
-                <div class="col-md-7 profile-details">
+                <div class="col-lg-7 col-md-9 profile-details">
                     <p class="name">Name: </p>
                     <p class="user-id">User ID: </p>
                     <p class="bks-borrowed">Books returned/borrowed: </p>
                     <p class="fees-owed">Fees owed: </p>
                     <p class="join-date">Date joined:</p>
-                    <div class="cotainer profile-tags">
-                        <p style="font-size:10px;">tags</p>
+                    <div class="cotainer profile-sticker">
+                        <i class="fa fa-certificate unathenticated" style="color:grey;"></i>
+                        <!--<i class="fa fa-certificate athenticated" style="color:green"></i>-->
+                        <!--<i class="fa fa-close suspended" style="color:orange"></i>-->
+                        <!--<i class="fa fa-close banned" style="color:red"></i>-->
+                    </div>
+                    <div class="edit-icon">
+                        <a href="#" style="font-size:10px;"><i class=" fa fa-edit"></i> edit</a>
                     </div>
                 </div>
 
-                <div class="col-md-2">
-
+                <div class="col-lg-2 col-md-2 profile-tags">
+                    <h4 style="text-align:center;">tags:</h4>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="container borrowed-sec">
+        <table class="borrowed-table">
+            <tr class="borrowed-header">
+                <th>code</th>
+                <th>title</th>
+                <th>author</th>
+                <th>date borrowed</th>
+                <th>return deadline</th>
+                <th>days left</th>
+                <th>status</th>
+                <th>fee(Ksh)</th>
+            </tr>
+            <tr class="borrowed-row" id="borrowed-row-1">
+                <th class="bk-code">86981293</th>
+                <th class="bk-title">How DO They Do It</th>
+                <th class="bk-author">Guy, Some F.</th>
+                <th class="borrow-date">03/17/2018</th>
+                <th class="deadline">03/24/2018</th>
+                <th class="days-left" id="days-left-1">3</th>
+                <th class="status">borrowed</th>
+                <th class="unreturned-fee">NA</th>
+            </tr>
+            <tr class="borrowed-row" id="borrowed-row-2">
+                <th class="bk-code">86981333</th>
+                <th class="bk-title">Like This</th>
+                <th class="bk-author">Lady St. Frau</th>
+                <th class="borrow-date">03/17/2018</th>
+                <th class="deadline">03/21/2018</th>
+                <th class="days-left" id="days-left-2">-1</th>
+                <th class="status">unreturned</th>
+                <th class="unreturned-fee">30</th>
+            </tr>
+        </table>
+    </div>
 
+
+<script src="../../script/main.js"></script>
 </body>
 
 </html>
