Add library template and corresponding css

--- a/Designs/UI/index.html
+++ b/Designs/UI/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="sign in to your hello books account">
     <meta name="author" content="obola">
-    <link rel="icon" href="media/favicon.ico">
+    <link rel="icon" href="../..media/favicon.ico">
 
     <title>sign-in | HELLO BOOKS</title>
 
@@ -21,7 +21,7 @@
 
 <body>
     <nav class="navbar">
-        <a class="navbar-brand brand-log" href="home.html">hello
+        <a class="navbar-brand brand-log" href="#">hello
             <b style="color:tomato;">books</b>
         </a>
     </nav>
@@ -49,7 +49,7 @@
                             <br>
                         </fieldset>
                         <br>
-                        <a href="profile.html">
+                        <a href="library.html">
                             <button type="button" onclick="" class="sign-in-btn">sign in</button>
                         </a>
                         <!--link element used for purposes of demonstration only-->
