--- a/Designs/UI/signup.html
+++ b/Designs/UI/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="sign up for a Hello Books account">
     <meta name="author" content="obola">
-    <link rel="icon" href="media/favicon.ico">
+    <link rel="icon" href="../../media/favicon.ico">
 
     <title>sign-up | HELLO BOOKS</title>
 
@@ -38,7 +38,7 @@
                             <input type="text" name="username" placeholder="username">
                             <br> email:
                             <br>
-                            <input type="text" name="email" placeholder="email">
+                            <input type="email" name="email" placeholder="email">
                             <br> phone number:
                             <br>
                             <input type="text" name="phone_number" placeholder="phone number">
