--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="obola">
-    <link rel="icon" href="media/favicon.ico">
+    <link rel="icon" href="../../media/favicon.ico">
 
     <title>preview | HELLO BOOKS</title>
 
@@ -24,12 +24,12 @@
 <body onload="checkDaysLeft()">
 
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand brand-main" href="#">hello
+        <a class="navbar-brand brand-main" href="library.html">hello
             <b style="color:white;">books</b>
         </a>
        
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#" style="font-size:12px">
                     <i class="fa fa-power-off"></i> logout</a>
             </li>
@@ -40,16 +40,16 @@
         <nav class="sidenav">
             <ul>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="library.html">
                         <i class="fa fa-book"></i><b class="nav-term"> library</b></a>
                 </li>
                 <li class="nav-item active">
                     <a href="">
-                        <i class="fa fa-user-circle-o"></i></i><b class="nav-term"> home</b></a>
+                        <i class="fa fa-user-circle-o"></i></i><b class="nav-term"> profile</b></a>
                 </li>
                 <li class="nav-item">
                     <a href="">
-                        <i class="fa fa-map-o"></i></i><b class="nav-term"> history</b></a>
+                        <i class="fa fa-history"></i></i><b class="nav-term"> history</b></a>
                 </li>
             </ul>
         </nav>
@@ -101,6 +101,7 @@
                 <th>days left</th>
                 <th>status</th>
                 <th>fee(Ksh)</th>
+                <th>return</th>
             </tr>
             <tr class="borrowed-row" id="borrowed-row-1">
                 <th class="bk-code">86981293</th>
@@ -111,6 +112,7 @@
                 <th class="days-left" id="days-left-1">3</th>
                 <th class="status">borrowed</th>
                 <th class="unreturned-fee">NA</th>
+                <th class="return-btn"><a href=""><i class=" fa fa-book"></i></a></th>
             </tr>
             <tr class="borrowed-row" id="borrowed-row-2">
                 <th class="bk-code">86981333</th>
@@ -121,6 +123,7 @@
                 <th class="days-left" id="days-left-2">-1</th>
                 <th class="status">unreturned</th>
                 <th class="unreturned-fee">30</th>
+                <th class="return-btn"><a href=""><i class=" fa fa-book"></i></a></th>
             </tr>
         </table>
     </div>
