--- a/Designs/UI/index.html
+++ b/Designs/UI/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="sign in to your hello books account">
     <meta name="author" content="obola">
-    <link rel="icon" href="../..media/favicon.ico">
+    <link rel="icon" href="../../media/favicon.ico">
 
     <title>sign-in | HELLO BOOKS</title>
 
