--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -110,10 +110,35 @@
                 <th class="borrow-date">03/17/2018</th>
                 <th class="deadline">03/24/2018</th>
                 <th class="days-left" id="days-left-1">3</th>
-                <th class="status">borrowed</th>
+                <th class="status" id="status">borrowed</th>
                 <th class="unreturned-fee">NA</th>
-                <th class="return-btn"><a href=""><i class=" fa fa-book"></i></a></th>
+                <th class="return-btn">
+                    <a href="" data-toggle="collapse" data-target="#return-row-1" onclick="getDate()">
+                        <i class="fa fa-book"></i>
+                    </a>
+                </th>
             </tr>
+
+            <div class="collapse return-collapse" id="return-row-1">
+                <div class=" container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="../../media/book-covers/howDoTheyDoIt.png" alt="book cover" class="bk-cover-pic">
+                        </div>
+                        <div class="col-md-4">
+                            <h5><i style="color:tomato;">Return?</i> How DO They Do It</h5>
+                            <p return-fee>fee owed: NA</p>
+                            <p id="date-returned" onload="getDate()"></p>
+                        </div>
+                        <div class="col-md-4">
+                            <button type="button" onclick="returnBook()" class="return-bk-btn" data-toggle="collapse" data-target="#return-row-1">
+                                return book
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <tr class="borrowed-row" id="borrowed-row-2">
                 <th class="bk-code">86981333</th>
                 <th class="bk-title">Like This</th>
@@ -123,12 +148,40 @@
                 <th class="days-left" id="days-left-2">-1</th>
                 <th class="status">unreturned</th>
                 <th class="unreturned-fee">30</th>
-                <th class="return-btn"><a href=""><i class=" fa fa-book"></i></a></th>
+                <th class="return-btn">
+                    <a href="" data-toggle="collapse" data-target="#return-row-2">
+                        <i class="fa fa-book"></i>
+                    </a>
+                </th>
             </tr>
+
+            <div class="collapse return-collapse" id="return-row-2">
+                <div class=" container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="../../media/book-covers/defaultCover.png" alt="book cover" class="bk-cover-pic">
+                        </div>
+                        <div class="col-md-4">
+                            <h5><i style="color:tomato;">Return?</i> Like This</h5>
+                            <p return-fee>fee owed: NA</p>
+                            <p class="date-returned"></p>
+                        </div>
+                        <div class="col-md-4">
+                            <button type="button" onclick="returnBook()" class="return-bk-btn" data-toggle="collapse" data-target="#return-row-2">
+                                return book
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </table>
     </div>
 
 
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="../../script/js/bootstrap.min.js"></script>
 <script src="../../script/main.js"></script>
 </body>
 
