add history template

--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -48,7 +48,7 @@
                         <i class="fa fa-user-circle-o"></i></i><b class="nav-term"> profile</b></a>
                 </li>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="history.html">
                         <i class="fa fa-history"></i></i><b class="nav-term"> history</b></a>
                 </li>
             </ul>
@@ -57,7 +57,7 @@
 
     <div class="container profile-sec">
         <div class="profile-header">
-            <h3 class="profile-title">Your Profile</h3>
+            <h4 class="profile-title">Your Profile</h4>
         </div>
 
         <div class="container-fluid profile-info">
