--- a/Designs/UI/library.html
+++ b/Designs/UI/library.html
@@ -30,7 +30,13 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#" style="font-size:12px">
+                <a class="nav-link" href="addbook.html">
+                    <i class="fa fa-plus"></i> add new
+                </a>
+            </li>
+            <!--will be hidden for all except admin-->
+            <li class="nav-item">
+                <a class="nav-link" href="#">
                     <i class="fa fa-power-off"></i> logout</a>
             </li>
         </ul>
