--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -30,6 +30,11 @@
        
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <a class="nav-link" href="addbook.html"><i class="fa fa-plus"></i> add new</a>
+            </li>
+            <!--visible for purposes of demonstration
+            will only be seen by admins whne in production-->
+            <li class="nav-item">
                 <a class="nav-link" href="#" style="font-size:12px">
                     <i class="fa fa-power-off"></i> logout</a>
             </li>
@@ -57,7 +62,7 @@
 
     <div class="container profile-sec">
         <div class="profile-header">
-            <h4 class="profile-title">Your Profile</h4>
+            <h4 class="profile-title">Your Profile:</h4>
         </div>
 
         <div class="container-fluid profile-info">
