--- a/Designs/UI/signup.html
+++ b/Designs/UI/signup.html
@@ -41,7 +41,7 @@
                             <input type="email" name="email" placeholder="email">
                             <br> phone number:
                             <br>
-                            <input type="text" name="phone_number" placeholder="phone number">
+                            <input type="tel" name="phone_number" placeholder="phone number">
                             <br> date of birth:
                             <br>
                             <input type="date" name="dob" placeholder="date of birth">
