add update book template to allow adding, editing and deleting of book info

--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -30,7 +30,7 @@
        
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="addbook.html"><i class="fa fa-plus"></i> add new</a>
+                <a class="nav-link" href="updateinfo"><i class="fa fa-plus"></i> update book</a>
             </li>
             <!--visible for purposes of demonstration
             will only be seen by admins whne in production-->
@@ -75,7 +75,7 @@
                     <p class="name">Name: </p>
                     <p class="user-id">User ID: </p>
                     <p class="bks-borrowed">Books returned/borrowed: </p>
-                    <p class="fees-owed">Fees owed: </p>
+                    <p class="fees-owed">Total fees owed: </p>
                     <p class="join-date">Date joined:</p>
                     <div class="cotainer profile-sticker">
                         <i class="fa fa-certificate unathenticated" style="color:grey;"></i>
