--- a/Designs/UI/history.html
+++ b/Designs/UI/history.html
@@ -30,8 +30,8 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="addbook.html">
-                    <i class="fa fa-plus"></i> add new
+                <a class="nav-link" href="updateinfo.html">
+                    <i class="fa fa-plus"></i> update book
                 </a>
             </li>
             <!--will be hidden for all except admin-->
@@ -46,7 +46,7 @@
         <nav class="sidenav">
             <ul>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="library.com">
                         <i class="fa fa-book"></i>
                         <b class="nav-term"> library</b>
                     </a>
