--- a/Designs/UI/library.html
+++ b/Designs/UI/library.html
@@ -30,8 +30,8 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="addbook.html">
-                    <i class="fa fa-plus"></i> add new
+                <a class="nav-link" href="updateinfo.html">
+                    <i class="fa fa-plus"></i> update book
                 </a>
             </li>
             <!--will be hidden for all except admin-->
@@ -99,6 +99,9 @@
                     <p class="book-synopsis">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, obcaecati.
                     </p>
+                    <div class="borrow-icon">
+                        <button name="borrow_btn" class="borrow_btn"></button>
+                    </div>
                 </div>
                 <div class="indv-book-deatails">
                     <img src="../../media/book-covers/josephHeller-Catch22.jpg" alt="book cover" class="bk-cover-pic">
