--- a/Designs/UI/addbook.html
+++ b/Designs/UI/addbook.html
@@ -30,7 +30,7 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo.html">
+                <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
             </li>
