--- a/Designs/UI/history.html
+++ b/Designs/UI/history.html
@@ -24,13 +24,12 @@
 <body>
 
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand brand-main" href="#">hello
-            <b style="color:white;">books</b>
+        <a class="navbar-brand brand-main" href="library.html">hello<b style="color:white;">books</b>
         </a>
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo.html">
+                <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
             </li>
@@ -46,7 +45,7 @@
         <nav class="sidenav">
             <ul>
                 <li class="nav-item">
-                    <a href="library.com">
+                    <a href="library.html">
                         <i class="fa fa-book"></i>
                         <b class="nav-term"> library</b>
                     </a>
