--- a/Designs/UI/library.html
+++ b/Designs/UI/library.html
@@ -24,13 +24,12 @@
 <body onload="checkDaysLeft()">
 
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand brand-main" href="#">hello
-            <b style="color:white;">books</b>
+        <a class="navbar-brand brand-main" href="#">hello<b style="color:white;">books</b>
         </a>
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo.html">
+                <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
             </li>
@@ -92,15 +91,15 @@
             <div class="col-md-3 book-details">
                 <div class="indv-book-deatails">
                     <img src="../../media/book-covers/anthonyBurgess-AClockworkOrange.jpg" alt="book cover" class="bk-cover-pic">
-                    <h4 class="book-title">A Clockwork Orange,</h4>
-                    <p class="book-author">Anthony Burgess</p>
+                    <h4 class="book-title" id="book-title-1">A Clockwork Orange,</h4>
+                    <p class="book-author" id="book-author-1">Anthony Burgess</p>
                     <p class="book-genre"><b class="book-sub-genre">Fiction - </b></p>
                     <p class="available-copies">copies: <i class="copies-available"></i>/<i class="copiestot"></i></p>
                     <p class="book-synopsis">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, obcaecati.
                     </p>
-                    <div class="borrow-icon">
-                        <button name="borrow_btn" class="borrow_btn"></button>
+                    <div class="borrow-icon" data-toggle="tooltip" title="borrow book">
+                        <button name="borrow_btn" class="borrow_btn" onclick="borrowBook()"><i class="fa fa-bookmark"></i></button>
                     </div>
                 </div>
                 <div class="indv-book-deatails">
@@ -113,6 +112,11 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed vitae, fuga, 
                         id ut magnam sapiente qui sunt, temporibus nemo eos pariatur blanditiis.
                     </p>
+                    <div class="borrow-icon" data-toggle="tooltip" title="borrow book">
+                        <button name="borrow_btn" class="borrow_btn">
+                            <i class="fa fa-bookmark"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -127,6 +131,11 @@
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         Tempora quisquam inventore magni dolorum consequatur voluptates repudiandae a sunt ducimus qui?
                     </p>
+                    <div class="borrow-icon" data-toggle="tooltip" title="borrow book">
+                        <button name="borrow_btn" class="borrow_btn">
+                            <i class="fa fa-bookmark"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -140,6 +149,11 @@
                     <p class="book-synopsis">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum sit nulla quibusdam adipisci iusto ex ad dol.
                     </p>
+                    <div class="borrow-icon" data-toggle="tooltip" title="borrow book">
+                        <button name="borrow_btn" class="borrow_btn">
+                            <i class="fa fa-bookmark"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -153,6 +167,11 @@
                     <p class="book-synopsis">
                         Lorem ipsum dolor, sit amet consectetur adipisicing.
                     </p>
+                    <div class="borrow-icon" data-toggle="tooltip" title="borrow book">
+                        <button name="borrow_btn" class="borrow_btn">
+                            <i class="fa fa-bookmark"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
             
