--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -24,13 +24,12 @@
 <body onload="checkDaysLeft()">
 
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand brand-main" href="library.html">hello
-            <b style="color:white;">books</b>
+        <a class="navbar-brand brand-main" href="library.html">hello<b style="color:white;">books</b>
         </a>
        
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo"><i class="fa fa-plus"></i> update book</a>
+                <a class="nav-link" href="updateinfo" data-toggle="tooltip" title="add or edit book"><i class="fa fa-plus"></i> update book</a>
             </li>
             <!--visible for purposes of demonstration
             will only be seen by admins whne in production-->
