--- a/Designs/UI/updateinfo.html
+++ b/Designs/UI/updateinfo.html
@@ -30,7 +30,7 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo.html">
+                <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
             </li>
@@ -45,7 +45,7 @@
         <nav class="sidenav">
             <ul>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="library.html">
                         <i class="fa fa-book"></i>
                         <b class="nav-term"> library</b>
                     </a>
@@ -77,15 +77,18 @@
             </form>
             <h5>OR</h5>
 
+            <hr style="color:tomato; border-width:10px;">
             <h5>Edit Book Details</h5>
 
             <form action="" class="addbook_form">
                 <fieldset style="text-align:center;">
-                <input type="text" name="searchbox" class="searchbox" placeholder="search code/title/author" style="width:100%;">
-                <button type="button" onclick="" class="search-btn" style="margin:8px auto;">
-                    <i class="fa fa-search"></i>
-                </button>
+                    <input type="text" name="searchbox" class="searchbox" placeholder="search code/title/author" style="width:100%;">
+                    <button type="button" onclick="" class="search-btn" style="margin:8px auto;" data-toggle="collapse" data-target="#form-edit-sec">
+                        <i class="fa fa-search" ></i>
+                    </button>
                 </fieldset>
+
+                <!-- <fieldset class="collapse form-collapse" id="form-edit-sec"> -->
                 Edit book cover picture:
                 <br>
                 <img src="../../media/book-covers/defaultCover.png" alt="book cover" style="max-width:200px;">
