fixes link issues in history.html and element positioning in add new

--- a/Designs/UI/updateinfo.html
+++ b/Designs/UI/updateinfo.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="history.html">
                         <i class="fa fa-history"></i>
                         <b class="nav-term"> history</b>
                     </a>
