--- a/Designs/UI/addbook.html
+++ b/Designs/UI/addbook.html
@@ -45,7 +45,7 @@
         <nav class="sidenav">
             <ul>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="library.html">
                         <i class="fa fa-book"></i>
                         <b class="nav-term"> library</b>
                     </a>
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="history.html">
                         <i class="fa fa-history"></i>
                         <b class="nav-term"> history</b>
                     </a>
