modify sidenav color theme

--- a/Designs/UI/addbook.html
+++ b/Designs/UI/addbook.html
@@ -29,7 +29,7 @@
         </a>
 
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
