--- a/Designs/UI/signup.html
+++ b/Designs/UI/signup.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="container login-main">
         <div class="row login-row">
-            <div class="col-md-7 login-left">
+            <div class="col-md-7 login-left signup-left">
                 <div class="container login-container">
                     <form class="signup-form" method="post" action="">
                         <fieldset>
