--- a/Designs/UI/profile.html
+++ b/Designs/UI/profile.html
@@ -29,7 +29,7 @@
        
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="updateinfo" data-toggle="tooltip" title="add or edit book"><i class="fa fa-plus"></i> update book</a>
+                <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book"><i class="fa fa-plus"></i> update book</a>
             </li>
             <!--visible for purposes of demonstration
             will only be seen by admins whne in production-->
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-lg-2 col-md-2 profile-tags">
-                    <h4 style="text-align:center;">tags:</h4>
+                    <h5 style="text-align:center; color:tomato; text-decoration-line:underline;">tags</h5>
                 </div>
             </div>
         </div>
