--- a/Designs/UI/updateinfo.html
+++ b/Designs/UI/updateinfo.html
@@ -24,12 +24,11 @@
 <body>
 
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand brand-main" href="#">hello
-            <b style="color:white;">books</b>
+        <a class="navbar-brand brand-main" href="#">hello<b style="color:white;">books</b>
         </a>
 
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="updateinfo.html" data-toggle="tooltip" title="add or edit book">
                     <i class="fa fa-plus"></i> update book
                 </a>
